{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "4b148e72-70ac-4651-bca9-8a1cf197de90",
            "actions": [
                {
                    "name": "PrimaryPosition",
                    "type": "Value",
                    "id": "9943475d-fd5f-4ed0-9910-5be2ebdd6d7c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PrimaryPhase",
                    "type": "Value",
                    "id": "24b85a89-75fc-43ab-ac7f-59ee80d2e5c9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Tap",
                    "type": "Button",
                    "id": "4a1e28ea-78ab-48d4-93e0-01710ebf0d1c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Drag",
                    "type": "Value",
                    "id": "dd8f888c-8926-4733-8434-cf13357e8623",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "271240f6-9e8d-4d6d-be4b-7f581b2802c1",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a7d8beff-01ca-4f77-a848-a86c7b43e5c8",
                    "path": "<Touchscreen>/primaryTouch/phase",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryPhase",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6c381cfb-8f45-4907-82d6-0c74b05612f2",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5d47f213-8621-4f1e-a226-83de1ea8fdf7",
                    "path": "<Touchscreen>/primaryTouch/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Drag",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}